Horizontal scrollbar fixed

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -81,6 +81,7 @@ input {
 
 ::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
 }
    
 ::-webkit-scrollbar-track {
